style: Fixed form overflow issue

--- a/client/web/src/pages/auth/auth.css
+++ b/client/web/src/pages/auth/auth.css
@@ -27,7 +27,6 @@
     flex-direction: column;
     height: 100vh;
     width: 50%;
-    min-width: 600px;
     padding: 160px 75px;
     gap: 20px;
     transition: all 0.25s ease-in-out;
@@ -38,7 +37,6 @@
 }
 
 .auth-form h1 {
-    width: 300px;
     font-size: 1.8rem;
 }
 
@@ -63,6 +61,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.auth-header div{
+    width: 50%;
+}
+
+.auth-header h1{
+    width: 100%;
 }
 
 .login .auth-form {
@@ -209,7 +215,6 @@
   }
   
   .auth-form h1 {
-    width: 50%;
     font-size: 1.4rem;
   }
 
@@ -227,6 +232,6 @@
   }
 
   .auth-header img{
-    width: 80px;
+    width: 100px;
   }
 }
